--- a/app/src/main/res/layout/activity_manage_community.xml
+++ b/app/src/main/res/layout/activity_manage_community.xml
@@ -4,102 +4,85 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EDF0f4"
+    android:background="#D6DDE5"
     android:orientation="vertical"
     tools:context=".ManageCommunityActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.SoftvisionCommunityTracker.AppBarOverlay">
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/Theme.SoftvisionCommunityTracker.PopupOverlay" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:src="@drawable/softvision_email_static_logo"
+        android:background="#D6DDE5"/>
 
     <TextView
-        android:id="@+id/tv_Community_Input_Page"
+        android:id="@+id/tvCommunityInputPage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="60dp"
         android:layout_marginBottom="36dp"
         android:text="Community Input Page."
         android:textAlignment="center"
-        android:textColor="#808080"
+        android:textColor="#a0afc1"
         android:textSize="25sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:gravity="center"
+        android:padding="10dp" />
 
     <EditText
         android:id="@+id/etNameOfCommunity"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:hint="boarder edittext"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:hint="@string/name_of_community"
+        android:textColor="#808080"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:background="@drawable/rounded_border"
+        android:padding="10dp" />
+
+
+    <Spinner
+        android:id="@+id/spcommunity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/spinner_background"
+        android:hint="@string/community_assigned_to"
+        android:textColor="#a0afc1"
+        android:textSize="15sp"
+        android:padding="12dp"/>
+
+
+    <EditText
+        android:id="@+id/etCommunityDescription"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="36dp"
-        android:text="Name of Community"
+        android:background="@drawable/rounded_border"
+        android:gravity="start|top"
+        android:hint="Community Description"
         android:textColor="#808080"
         android:textSize="15sp"
         android:textStyle="bold"
-        android:background="@drawable/edit_text_background"
-        android:padding="10dp" />
-
-    <Spinner
-        android:id="@+id/sp_community"
-        android:layout_width="388dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="36dp"
-        android:background="@drawable/edit_text_background"
-        android:hint="boarder edittext"
-        android:padding="10dp"
-        android:text="Community Assigned To"
-        android:textColor="#808080"
-        android:textSize="15sp"
-        android:textStyle="bold" />
-
-
-    <TextView
-        android:id="@+id/tv_result"
-        android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="36dp"
-        android:gravity="center" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="157dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="36dp"
-        android:background="@drawable/edit_text_background"
-        android:textAlignment="viewStart" />
+        android:padding="10dp"/>
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="300dp"
         android:layout_marginEnd="20dp"
-        android:text="Save" />
+        android:text="Save"
+        android:textColor="@color/white"
+        android:background="#000000"/>
 
 
 </LinearLayout>
