--- a/app/src/main/res/layout/activity_manage_community.xml
+++ b/app/src/main/res/layout/activity_manage_community.xml
@@ -10,6 +10,7 @@
 
 
     <ImageView
+        android:id="@+id/ivLogo"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:src="@drawable/softvision_email_static_logo"
@@ -75,7 +76,7 @@
         android:padding="10dp"/>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonSave"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginStart="300dp"
