--- a/app/src/main/res/layout/simple_spinner_item.xml
+++ b/app/src/main/res/layout/simple_spinner_item.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/text1"
     style="?android:attr/spinnerItemStyle"
+    android:hint="@string/community_assigned_to"
     android:singleLine="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
