--- a/app/src/main/res/layout/custom_simple_spinner_item.xml
+++ b/app/src/main/res/layout/custom_simple_spinner_item.xml
@@ -8,8 +8,9 @@
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
     android:textAlignment="inherit"
-    android:background="@drawable/rounded_border"
+    android:background="@drawable/bg_spinner"
     android:layout_margin="10dp"
-    android:padding="10dp">
+    android:padding="15dp"
+    android:textColor="#9c9b9b">
 
 </TextView>
