updated code with retrofit

--- a/app/src/main/res/layout/custom_simple_spinner_item.xml
+++ b/app/src/main/res/layout/custom_simple_spinner_item.xml
@@ -10,7 +10,6 @@
     android:textAlignment="inherit"
     android:background="@drawable/bg_spinner"
     android:layout_margin="10dp"
-    android:padding="15dp"
-    android:textColor="#9c9b9b">
+    android:padding="15dp">
 
 </TextView>
