--- a/app/src/main/res/layout/activity_manage_community.xml
+++ b/app/src/main/res/layout/activity_manage_community.xml
@@ -11,10 +11,12 @@
 
     <ImageView
         android:id="@+id/ivLogo"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_width="370dp"
+        android:layout_height="110dp"
+        android:background="#D6DDE5"
         android:src="@drawable/softvision_email_static_logo"
-        android:background="#D6DDE5"/>
+        android:layout_gravity="center"
+        android:layout_weight=".30"/>
 
     <TextView
         android:id="@+id/tvCommunityInputPage"
@@ -22,13 +24,15 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginBottom="36dp"
+        android:layout_marginEnd="10dp"
         android:text="Community Input Page."
         android:textAlignment="center"
         android:textColor="#a0afc1"
         android:textSize="25sp"
         android:textStyle="bold"
         android:gravity="center"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:layout_weight=".10"/>
 
     <EditText
         android:id="@+id/etNameOfCommunity"
@@ -43,26 +47,28 @@
         android:textSize="15sp"
         android:textStyle="bold"
         android:background="@drawable/rounded_border"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:layout_weight=".05"/>
 
 
     <Spinner
         android:id="@+id/spcommunity"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/spinner_background"
         android:hint="@string/community_assigned_to"
         android:textColor="#a0afc1"
         android:textSize="15sp"
-        android:padding="12dp"/>
+        android:padding="10dp"
+        android:layout_weight=".10"/>
 
 
     <EditText
         android:id="@+id/etCommunityDescription"
         android:layout_width="match_parent"
-        android:layout_height="219dp"
+        android:layout_height="200dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
@@ -73,17 +79,21 @@
         android:padding="10dp"
         android:textColor="#808080"
         android:textSize="15sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_weight=".10"/>
 
     <Button
         android:id="@+id/buttonSave"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_width="80dp"
+        android:layout_height="30dp"
         android:layout_marginStart="300dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="20dp"
+        android:background="#000000"
         android:text="Save"
         android:textColor="@color/white"
-        android:background="#000000"/>
+        android:padding="10dp"
+        android:layout_weight=".10"/>
 
 
 </LinearLayout>
