--- a/app/src/main/res/drawable-v24/border.xml
+++ b/app/src/main/res/drawable-v24/border.xml
@@ -2,10 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff"/>
-            <corners android:radius="8dp"/>
+            <solid android:color="#ffffff"/>/>
             <stroke
-                android:width="3dp"
+                android:width="2dp"
                 android:color="#c8d2dc"/>
         </shape>
     </item>
