--- a/app/src/main/res/layout/activity_manage_community.xml
+++ b/app/src/main/res/layout/activity_manage_community.xml
@@ -50,10 +50,12 @@
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="match_parent"
-            android:layout_height="62dp"
+            android:layout_height="50dp"
             android:padding="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
+            android:minHeight="48dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/bg_spinner"
             android:layout_weight=".1"/>
 
         <EditText
