--- a/app/src/main/res/layout/item_community.xml
+++ b/app/src/main/res/layout/item_community.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/layoutColor"
+        android:id="@+id/cvCommunity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -9,15 +9,37 @@
         app:cardCornerRadius="5dp"
         app:elevation="30dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/tvCommunityName"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:padding="10dp"
             android:textStyle="bold|italic"
             android:textSize="16sp"
+            android:textColor="#FFFFFF"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center"
             android:text="@string/CommunityName"/>
+
+        <ImageButton
+            android:id="@+id/imbUpdateCommunity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/menu_edit"
+            android:layout_marginBottom="10dp"
+            android:contentDescription="update_community"/>
+
+    </LinearLayout>
+
+
+
 
 
 
