--- a/app/src/main/res/layout/item_community.xml
+++ b/app/src/main/res/layout/item_community.xml
@@ -8,6 +8,12 @@
         app:cardBackgroundColor="@color/grey"
         app:cardCornerRadius="5dp"
         app:elevation="30dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvCommunityName"
@@ -16,9 +22,18 @@
             android:padding="10dp"
             android:textStyle="bold|italic"
             android:textSize="16sp"
+            android:textColor="#FFFFFF"
             android:layout_gravity="center"
             android:text="@string/CommunityName"/>
 
+        <ImageButton
+            android:id="@+id/imbUpdateCommunity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/menu_edit"
+           android:contentDescription="update_community"/>
+    </LinearLayout>
 
 
     </androidx.cardview.widget.CardView>
