--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,7 +42,7 @@
             app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>
 
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/etUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints="@string/prompt_email"
@@ -50,13 +50,15 @@
             android:inputType="textEmailAddress"
             android:selectAllOnFocus="true"
             android:minHeight="48dp"
+            android:background="@drawable/border"
+            android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/etPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -67,6 +69,8 @@
             android:inputType="textPassword"
             android:selectAllOnFocus="true"
             android:minHeight="48dp"
+            android:padding="10dp"
+            android:background="@drawable/border"
             app:layout_constraintTop_toBottomOf="@+id/username" />
 
         <Button
