--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,6 +51,7 @@
             android:selectAllOnFocus="true"
             android:minHeight="48dp"
             android:background="@drawable/border"
+            android:layout_marginTop="30dp"
             android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
