--- a/app/src/main/res/layout/activity_resource.xml
+++ b/app/src/main/res/layout/activity_resource.xml
@@ -6,13 +6,74 @@
     android:layout_height="match_parent"
     tools:context=".ResourceActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+    <ImageView
+        android:id="@+id/ivLogo"
+        android:layout_width="270dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/cognizant_logo"
+        android:layout_weight=".3"/>
+
     <TextView
-        android:id="@+id/tvResourceTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/resource_page"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/tvTitle"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:padding="10dp"
+        android:hint="@string/resource_page"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="#9FAFC1"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_weight=".2"/>
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/border"
+        android:stretchColumns="1,2,3"
+        android:layout_weight=".5">
+
+        <TableRow>
+            <TextView
+                android:text="ID"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:padding="10dp"
+                android:gravity="center"
+                android:layout_column="1"/>
+            <TextView
+                android:text="ID"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:padding="10dp"
+                android:gravity="center"
+                android:layout_column="1"/>
+            <TextView
+                android:text="ID"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:padding="10dp"
+                android:gravity="center"
+                android:layout_column="1"/>
+        </TableRow>
+
+        <androidx.recyclerview.widget.RecyclerView>
+            
+        </androidx.recyclerview.widget.RecyclerView>
+
+
+    </TableLayout>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
