--- a/app/src/main/res/layout/activity_resource.xml
+++ b/app/src/main/res/layout/activity_resource.xml
@@ -45,21 +45,21 @@
 
         <TableRow>
             <TextView
-                android:text="ID"
+                android:text="Name"
                 android:textSize="16dp"
                 android:textStyle="bold"
                 android:padding="10dp"
                 android:gravity="center"
                 android:layout_column="1"/>
             <TextView
-                android:text="ID"
+                android:text="Assigned To"
                 android:textSize="16dp"
                 android:textStyle="bold"
                 android:padding="10dp"
                 android:gravity="center"
                 android:layout_column="1"/>
             <TextView
-                android:text="ID"
+                android:text="Hired Date"
                 android:textSize="16dp"
                 android:textStyle="bold"
                 android:padding="10dp"
@@ -67,9 +67,12 @@
                 android:layout_column="1"/>
         </TableRow>
 
-        <androidx.recyclerview.widget.RecyclerView>
-            
-        </androidx.recyclerview.widget.RecyclerView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvListCommunityMember"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_community_member"/>
 
 
     </TableLayout>
