--- a/app/src/main/res/layout/activity_resource.xml
+++ b/app/src/main/res/layout/activity_resource.xml
@@ -12,70 +12,83 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-    <ImageView
-        android:id="@+id/ivLogo"
-        android:layout_width="270dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/cognizant_logo"
-        android:layout_weight=".3"/>
+        <ImageView
+            android:id="@+id/ivLogo"
+            android:layout_width="270dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/cognizant_logo"
+            android:layout_weight=".3"/>
 
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:padding="10dp"
-        android:hint="@string/resource_page"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#9FAFC1"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_weight=".2"/>
-
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/border"
-        android:stretchColumns="1,2,3"
-        android:layout_weight=".5">
-
-        <TableRow>
-            <TextView
-                android:text="Name"
-                android:textSize="16dp"
-                android:textStyle="bold"
-                android:padding="10dp"
-                android:gravity="center"
-                android:layout_column="1"/>
-            <TextView
-                android:text="Assigned To"
-                android:textSize="16dp"
-                android:textStyle="bold"
-                android:padding="10dp"
-                android:gravity="center"
-                android:layout_column="1"/>
-            <TextView
-                android:text="Hired Date"
-                android:textSize="16dp"
-                android:textStyle="bold"
-                android:padding="10dp"
-                android:gravity="center"
-                android:layout_column="1"/>
-        </TableRow>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvListCommunityMember"
+        <TextView
+            android:id="@+id/tvTitle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:itemCount="3"
-            tools:listitem="@layout/item_community_member"/>
+            android:layout_height="55dp"
+            android:padding="10dp"
+            android:hint="@string/resource_page"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="#9FAFC1"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_weight=".2"/>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp">
 
-    </TableLayout>
+            <HorizontalScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TableLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="400dp"
+                    android:stretchColumns="1,2,3">
+
+                    <TableRow>
+                        <TextView
+                            android:layout_width="200dp"
+                            android:text="Name"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:padding="10dp"
+                            android:gravity="center"
+                            android:layout_column="1" />
+                        <TextView
+                            android:layout_width="200dp"
+                            android:text="Assigned To"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:padding="10dp"
+                            android:gravity="center"
+                            android:layout_column="1"/>
+                        <TextView
+                            android:layout_width="200dp"
+                            android:text="Hired Date"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:padding="10dp"
+                            android:gravity="center"
+                            android:layout_column="1"/>
+                    </TableRow>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rvListCommunityMember"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        tools:itemCount="3"
+                        tools:listitem="@layout/item_community_member"/>
+                </TableLayout>
+            </HorizontalScrollView>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
