--- a/app/src/main/res/layout/item_community_member.xml
+++ b/app/src/main/res/layout/item_community_member.xml
@@ -5,25 +5,28 @@
     android:stretchColumns="1,2,3">
     <TableRow>
         <TextView
+            android:layout_width="200dp"
             android:id="@+id/tvName"
             android:text="ID"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:padding="10dp"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:layout_column="1"/>
         <TextView
+            android:layout_width="200dp"
             android:id="@+id/tvAssignedTo"
             android:text="ID"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:padding="10dp"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:layout_column="1"/>
         <TextView
+            android:layout_width="200dp"
             android:id="@+id/tvHiredDate"
             android:text="ID"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:padding="10dp"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:layout_column="1"/>
     </TableRow>
 </TableLayout>
