--- a/app/src/main/res/layout/activity_resource.xml
+++ b/app/src/main/res/layout/activity_resource.xml
@@ -26,7 +26,7 @@
         <TextView
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="200dp"
             android:padding="10dp"
             android:hint="@string/resource_page"
             android:textAlignment="center"
@@ -34,7 +34,10 @@
             android:textColor="#9FAFC1"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:layout_weight=".2"/>
+            android:layout_weight="1.5"
+            android:ellipsize="none"
+            android:maxLines="100"
+            android:scrollHorizontally="false"/>
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView"
