--- a/app/src/main/res/layout/activity_resource.xml
+++ b/app/src/main/res/layout/activity_resource.xml
@@ -32,12 +32,11 @@
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="#9FAFC1"
-            android:textSize="24sp"
+            android:textSize="20sp"
+            android:autoSizeTextType="uniform"
             android:textStyle="bold"
-            android:layout_weight="1.5"
-            android:ellipsize="none"
-            android:maxLines="100"
-            android:scrollHorizontally="false"/>
+            android:layout_weight="2"
+            />
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView"
