--- a/app/src/main/res/layout/activity_resource.xml
+++ b/app/src/main/res/layout/activity_resource.xml
@@ -27,11 +27,12 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:padding="10dp"
+            android:autoSizeTextType="uniform"
             android:text="@string/resource_page"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="#9FAFC1"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:layout_weight=".2"/>
 
